# RealtimeChat

./: README.md  pyproject.toml
app/: docker-compose.yml
app/backend/: main.py  pyproject.toml  requirements.txt  testing.db
app/backend/alembic/: env.py
app/backend/api/v1/routers/: auth.py
app/backend/app/: main.py
app/backend/app/alembic/: env.py
app/backend/app/alembic/versions/: 50a2c96aa85a_.py  d5f6d2dfe167_.py
app/backend/app/api/v1/: main_routers.py
app/backend/app/api/v1/routers/: auth.py  chats.py  messages.py  user.py
app/backend/app/database/: models.py  session.py
app/backend/app/database/crud/: chats.py  messages.py  user.py
app/backend/app/database/schemas/: chat.py  message.py  user.py
app/backend/app/misc/: auth.py  config.py  security.py
app/backend/app/misc/connections/: connection_manager.py  redis_connection_manager.py
app/backend/app/tests/: fixtures.py
app/backend/database/: models.py  session.py
app/backend/database/crud/: user.py
app/backend/database/schemas/: user.py
app/backend/misc/: auth.py  config.py  security.py
app/frontend/: package.json
app/frontend/src/: App.jsx  Auth.jsx  ChatPage.css  ChatPage.jsx  Login.css  Login.jsx  Message.css  Message.jsx  Profile.jsx  index.css
app/nginx/: nginx.conf
app/scripts/: start.sh
application/: docker-compose.yml
application/backend/: Dockerfile  requirements.txt
application/backend/app/: initialize.py  main.py
application/frontend/: Dockerfile  package-lock.json  package.json
application/nginx/: nginx.conf
application/scripts/: start.sh
(+35 files in other folders)
