[tool.poetry]
name = "greenchat"
version = "0.1.0"
description = ""
authors = ["Maxim Drugov <midrugov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
SQLAlchemy = "^2.0.36"
alembic = "^1.13.3"
jwt = "^1.3.1"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
