[tool.poetry]
name = "greenchat"
version = "0.1.0"
description = ""
authors = ["Maxim Drugov <midrugov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
SQLAlchemy = "^2.0.36"
alembic = "^1.13.3"
passlib = "^1.7.4"
psycopg2 = "^2.9.10"
pyjwt = "^2.9.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
